Enhance documentation and styling consistency by updating global CSS, README, and .gitignore; add brand colors and refine Tailwind configuration.

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -74,16 +74,16 @@ DeployStack is the **Enterprise Control Plane for the Model Context Protocol (MC
 DeployStack consists of several integrated components that work together to provide enterprise-grade MCP server management:
 
 <Cards>
-<Card icon={<Container className="text-purple-500" />} title="deploystack" href="https://github.com/deploystackio/deploystack">
+<Card icon={<Container className="text-primary" />} title="deploystack" href="https://github.com/deploystackio/deploystack">
 The main platform providing centralized MCP server management, team collaboration, and the DeployStack Gateway
 </Card>
-<Card icon={<BookOpenText className="text-purple-500" />} title="awesome-mcp-server" href="https://github.com/deploystackio/awesome-mcp-server">
+<Card icon={<BookOpenText className="text-primary" />} title="awesome-mcp-server" href="https://github.com/deploystackio/awesome-mcp-server">
 Community-curated catalog of production-ready MCP servers with standardized configurations
 </Card>
-<Card icon={<FileText className="text-purple-500" />} title="documentation" href="https://github.com/deploystackio/documentation">
+<Card icon={<FileText className="text-primary" />} title="documentation" href="https://github.com/deploystackio/documentation">
 Comprehensive guides for MCP server management, security, and team collaboration
 </Card>
-<Card icon={<MessageCircleHeart className="text-purple-500" />} title="feedback" href="https://github.com/deploystackio/feedback">
+<Card icon={<MessageCircleHeart className="text-primary" />} title="feedback" href="https://github.com/deploystackio/feedback">
 Public repository for feature requests, bug reports, and roadmap discussions
 </Card>
 </Cards>
